# gnome-scanmem

./: .editorconfig  gnome-scanmem.doap  meson.build
data/: gnome-scanmem.gresource.xml  meson.build
data/ui/: gsm-select-process-dialog.ui  gsm-window.ui
gnome-scanmem/: config.vapi  gnome-scanmem.vala  gsm-select-process-dialog.vala  gsm-window.vala  meson.build
